--- a/templates/patient.html
+++ b/templates/patient.html
@@ -41,7 +41,7 @@
             <td><input name="area" placeholder="Area" id="area"></td>
             <td><input name="phone_no" placeholder="Phone Number" id="phone_no"></td>
 			<td><input name="mode" type="hidden" value="web"></td>
-			<td><input id="add-emp" type="submit" value="Add"></td>
+			<td><input id="add-pat" type="submit" value="Add"></td>
 		</tr>
 	</table>
 	</form>
