Added button to view reports (no link)

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,4 @@
 <h1>Welcome to the NHS  </h1>
+<a href="http://localhost:5000/web/manager">Lab Manager</a>
+
+<a href="http://localhost:5000/web/patients">Patient</a>
