trying to get report button to work

--- a/templates/manager-reports.html
+++ b/templates/manager-reports.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<a href="http://localhost:5000/web/manager"><button>Back</button></a>
+
 <title>Welcome Manager</title>
 </head>
 <body>
@@ -28,7 +30,7 @@
 			<td id="count" colspan="3">{{result|count}} : Reports Fetched</td>
 		</tr>
 	</table>
-	<form id="rep-reg-form" method="POST" action="./patients/register">
+	<form id="rep-reg-form" method="POST" action="./add-report/<int:patient_id>">
 	<table>
 		<tr>
 			<td><input name="date" placeholder="Date" id="date"></td>
