--- a/templates/patient-list-manager.html
+++ b/templates/patient-list-manager.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<a href="http://localhost:5000/web/"><button>Back</button></a>
+
 <title>Patient Information</title>
 </head>
 <body>
@@ -25,7 +27,7 @@
                 <td>{{pat.date_of_birth}}</td>
                 <td>{{pat.area}}</td>
                 <td>{{pat.phone_no}}</td>
-                <td><button href="">Reports</button></td>
+                <td> <a href="/web/manager/reports/<int:patient_id>" ><button (click) = display_report({{pat.patient_id}})>Reports</button></a></td>
 			</tr>
 		{%endfor%}
 		<tr>
