--- a/templates/patient.html
+++ b/templates/patient.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
+<a href="http://localhost:5000/web/"><button>Back</button></a>
+
 <title>Patient Information</title>
 </head>
 <body>
