--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
 <h1>Welcome to the NHS  </h1>
-<a href="http://localhost:5000/web/manager">Lab Manager</a>
+<a href="http://localhost:5000/web/manager"><h1>Lab Manager</h1></a>
 
-<a href="http://localhost:5000/web/patients">Patient</a>
+<a href="http://localhost:5000/web/patients"><h1>Patient</h1></a>
