Lab manager can now view area reports

--- a/templates/area-reports.html
+++ b/templates/area-reports.html
@@ -4,6 +4,8 @@
 <head>
 <meta charset="ISO-8859-1">
 
+<a href="http://localhost:5000/web/"><button>Back</button></a>
+
 <title>Area Reports</title>
 </head>
 <body>
