--- a/templates/patient-list-manager.html
+++ b/templates/patient-list-manager.html
@@ -35,5 +35,8 @@
 		</tr>
 	</table>
 	{%endif%} <!-- don't put space between words -->
+
+<a href="area_reports"><h1>View area reports</h1></a>
+
 </body>
 </html>
