Added back button to area reports

--- a/templates/area-reports.html
+++ b/templates/area-reports.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="ISO-8859-1">
 
-<a href="http://localhost:5000/web/"><button>Back</button></a>
+<a href="http://localhost:5000/web/manager"><button>Back</button></a>
 
 <title>Area Reports</title>
 </head>
