Added bootstrap css

--- a/templates/manager-reports.html
+++ b/templates/manager-reports.html
@@ -6,6 +6,7 @@
 <a href="http://localhost:5000/web/manager"><button>Back</button></a>
 
 <title>Welcome Manager</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
 	<h1>Report Information</h1>
