--- a/templates/patient-list-manager.html
+++ b/templates/patient-list-manager.html
@@ -5,6 +5,7 @@
 <a href="http://localhost:5000/web/"><button>Back</button></a>
 
 <title>Patient Information</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
 	<h1>Patient Information</h1>
