--- a/templates/area-reports.html
+++ b/templates/area-reports.html
@@ -7,6 +7,7 @@
 <a href="http://localhost:5000/web/manager"><button>Back</button></a>
 
 <title>Area Reports</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
 <h1>Area Reports</h1>
