--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+</head>
+
 <h1>Welcome to the NHS  </h1>
 <a href="http://localhost:5000/web/manager"><h1>Lab Manager</h1></a>
 
