Editted area reports page

--- a/templates/area-reports.html
+++ b/templates/area-reports.html
@@ -18,7 +18,7 @@
 
     </br>
 
-    <div>The diagnoses in descending order are below:</div>
+    <div>The diagnoses in this area are below:</div>
 
     </br>
 
